Astroporfolio/deploy/miporfolio/templates/service-portfolio.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-astroporfolio
  namespace: miportfolio 
spec:
  type: NodePort
  selector:
    app: astroporfolio
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30086
