Astroporfolio/deploy/miporfolio/templates/ingress-portfolio.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portfolio-ingress
  namespace: miportfolio
  annotations:
    kubernetes.io/ingress.class: "public" 
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: public 
  rules:
  - host: www.jorgedesarrollador.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service-astroporfolio 
            port:
              number: 80
